--- a/Speech and Language Processing Textbook/Naive Bayes/Naive_Bayes.ipynb
+++ b/Speech and Language Processing Textbook/Naive Bayes/Naive_Bayes.ipynb
@@ -319,6 +319,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1622ac44",
+   "metadata": {},
+   "source": [
+    "# Binario"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "3ba4a7b7",
