--- a/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
+++ b/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
@@ -2,11 +2,260 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d287ab17",
+   "execution_count": 2,
+   "id": "b3cf9605",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import math\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d287ab17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Diario</th>\n",
+       "      <th>Autor</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Título</th>\n",
+       "      <th>Texto</th>\n",
+       "      <th>Vínculo</th>\n",
+       "      <th>Clase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Nicolás Rodríguez</td>\n",
+       "      <td>16 de febrero de 2019</td>\n",
+       "      <td>De Rubio a Acevedo, pasando por Duque</td>\n",
+       "      <td>Al presidente Donald Trump poco o nada le inte...</td>\n",
+       "      <td>https://web.archive.org/web/20190216230452/htt...</td>\n",
+       "      <td>Política</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Salomón Kalmanovitz</td>\n",
+       "      <td>15 de septiembre de 2019</td>\n",
+       "      <td>Recentralización</td>\n",
+       "      <td>Una de las facetas que acompañan el autoritari...</td>\n",
+       "      <td>https://web.archive.org/web/20190916062046/htt...</td>\n",
+       "      <td>Política</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Adriana Cooper</td>\n",
+       "      <td>17 de octubre de 2019</td>\n",
+       "      <td>La primera alcaldesa de Medellín</td>\n",
+       "      <td>Cuando uno revisa los libros sobre historia de...</td>\n",
+       "      <td>https://web.archive.org/web/20191018032148/htt...</td>\n",
+       "      <td>Política</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Margarita Flórez</td>\n",
+       "      <td>16 de febrero de 2019</td>\n",
+       "      <td>Fracking, luz amarilla a temas de participació...</td>\n",
+       "      <td>Basándonos en la presentación realizada esta s...</td>\n",
+       "      <td>https://web.archive.org/web/20190217013801/htt...</td>\n",
+       "      <td>Medio Ambiente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Indalecio Dangond B.</td>\n",
+       "      <td>23 de febrero de 2019</td>\n",
+       "      <td>La hora del biodiésel</td>\n",
+       "      <td>Primero fue Medellín, ahora le tocó el turno a...</td>\n",
+       "      <td>https://web.archive.org/web/20190223102037/htt...</td>\n",
+       "      <td>Medio Ambiente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Julián López de Mesa Samudio</td>\n",
+       "      <td>6 de marzo de 2019</td>\n",
+       "      <td>Biofilia, árboles y ciudad</td>\n",
+       "      <td>En 1984, el gran entomólogo, sociobiólogo y do...</td>\n",
+       "      <td>https://web.archive.org/web/20190307141807/htt...</td>\n",
+       "      <td>Medio Ambiente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Santiago Montenegro</td>\n",
+       "      <td>11 de febrero de 2019</td>\n",
+       "      <td>“Roma”</td>\n",
+       "      <td>Guillermo del Toro, Alejandro González Iñárrit...</td>\n",
+       "      <td>https://web.archive.org/web/20190212015339/htt...</td>\n",
+       "      <td>Cultura</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Juan Carlos Botero</td>\n",
+       "      <td>14 de junio de 2019</td>\n",
+       "      <td>Arte que dura minutos</td>\n",
+       "      <td>La Bienal de Venecia concluyó hace poco, y el ...</td>\n",
+       "      <td>https://web.archive.org/web/20190615034748/htt...</td>\n",
+       "      <td>Cultura</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Juan Carlos Gómez</td>\n",
+       "      <td>21 de julio de 2019</td>\n",
+       "      <td>El futuro de Netflix</td>\n",
+       "      <td>El lanzamiento de la tercera temporada de La c...</td>\n",
+       "      <td>https://web.archive.org/web/20190722113712/htt...</td>\n",
+       "      <td>Cultura</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Héctor Abad Faciolince</td>\n",
+       "      <td>18 de agosto de 2019</td>\n",
+       "      <td>Los niños de la guerra</td>\n",
+       "      <td>Lo que más me gusta de esta película, Monos, d...</td>\n",
+       "      <td>https://web.archive.org/web/20190818130521/htt...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Diario                         Autor                     Fecha  \\\n",
+       "0  El Espectador             Nicolás Rodríguez     16 de febrero de 2019   \n",
+       "1  El Espectador           Salomón Kalmanovitz  15 de septiembre de 2019   \n",
+       "2  El Espectador                Adriana Cooper     17 de octubre de 2019   \n",
+       "3  El Espectador              Margarita Flórez     16 de febrero de 2019   \n",
+       "4  El Espectador          Indalecio Dangond B.     23 de febrero de 2019   \n",
+       "5  El Espectador  Julián López de Mesa Samudio        6 de marzo de 2019   \n",
+       "6  El Espectador           Santiago Montenegro     11 de febrero de 2019   \n",
+       "7  El Espectador            Juan Carlos Botero       14 de junio de 2019   \n",
+       "8  El Espectador             Juan Carlos Gómez       21 de julio de 2019   \n",
+       "9  El Espectador        Héctor Abad Faciolince      18 de agosto de 2019   \n",
+       "\n",
+       "                                              Título  \\\n",
+       "0              De Rubio a Acevedo, pasando por Duque   \n",
+       "1                                   Recentralización   \n",
+       "2                   La primera alcaldesa de Medellín   \n",
+       "3  Fracking, luz amarilla a temas de participació...   \n",
+       "4                              La hora del biodiésel   \n",
+       "5                         Biofilia, árboles y ciudad   \n",
+       "6                                             “Roma”   \n",
+       "7                              Arte que dura minutos   \n",
+       "8                               El futuro de Netflix   \n",
+       "9                             Los niños de la guerra   \n",
+       "\n",
+       "                                               Texto  \\\n",
+       "0  Al presidente Donald Trump poco o nada le inte...   \n",
+       "1  Una de las facetas que acompañan el autoritari...   \n",
+       "2  Cuando uno revisa los libros sobre historia de...   \n",
+       "3  Basándonos en la presentación realizada esta s...   \n",
+       "4  Primero fue Medellín, ahora le tocó el turno a...   \n",
+       "5  En 1984, el gran entomólogo, sociobiólogo y do...   \n",
+       "6  Guillermo del Toro, Alejandro González Iñárrit...   \n",
+       "7  La Bienal de Venecia concluyó hace poco, y el ...   \n",
+       "8  El lanzamiento de la tercera temporada de La c...   \n",
+       "9  Lo que más me gusta de esta película, Monos, d...   \n",
+       "\n",
+       "                                             Vínculo           Clase  \n",
+       "0  https://web.archive.org/web/20190216230452/htt...        Política  \n",
+       "1  https://web.archive.org/web/20190916062046/htt...        Política  \n",
+       "2  https://web.archive.org/web/20191018032148/htt...        Política  \n",
+       "3  https://web.archive.org/web/20190217013801/htt...  Medio Ambiente  \n",
+       "4  https://web.archive.org/web/20190223102037/htt...  Medio Ambiente  \n",
+       "5  https://web.archive.org/web/20190307141807/htt...  Medio Ambiente  \n",
+       "6  https://web.archive.org/web/20190212015339/htt...         Cultura  \n",
+       "7  https://web.archive.org/web/20190615034748/htt...         Cultura  \n",
+       "8  https://web.archive.org/web/20190722113712/htt...         Cultura  \n",
+       "9  https://web.archive.org/web/20190818130521/htt...             NaN  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = r\"data_prueba/prueba_naive_bayes.xlsx\"\n",
+    "data = pd.read_excel(path)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "095d7599",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lista de palabras relacionadas con política\n",
+    "politica = [\n",
+    "    \"democracia\", \"gobierno\", \"elecciones\", \"parlamento\", \"corrupción\",\n",
+    "    \"izquierda\", \"derecha\", \"populismo\", \"liberalismo\", \"conservadurismo\",\n",
+    "    \"políticas\", \"partidos\", \"voto\", \"legislación\", \"oposición\",\n",
+    "    \"presidente\", \"congreso\", \"liderazgo\", \"populista\", \"reforma\"\n",
+    "]\n",
+    "\n",
+    "# Lista de palabras relacionadas con medio ambiente\n",
+    "medio_ambiente = [\n",
+    "    \"sostenibilidad\", \"climático\", \"contaminación\", \"biodiversidad\", \"renovables\",\n",
+    "    \"deforestación\", \"reciclaje\", \"emisiones\", \"ecología\", \"conservación\",\n",
+    "    \"calentamiento\", \"ambiental\", \"polución\", \"agotamiento\", \"residuos\",\n",
+    "    \"ecológica\", \"carbono\", \"protección ambiental\", \"ecosistema\", \"sostenible\"\n",
+    "]\n",
+    "\n",
+    "# Lista de palabras relacionadas con cultura\n",
+    "cultura = [\n",
+    "    \"arte\", \"literatura\", \"cine\", \"música\", \"teatro\",\n",
+    "    \"patrimonio\", \"tradición\", \"identidad\", \"diversidad\", \"folclore\",\n",
+    "    \"creatividad\", \"exposición\", \"festival\", \"crítica\", \"vanguardia\",\n",
+    "    \"heritage\", \"artística\", \"movimiento\", \"cultural\", \"intercultural\"\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# Diccionario \n",
+    "palabras_clave = {\n",
+    "    \"politica\": politica,\n",
+    "    \"medio_ambiente\": medio_ambiente,\n",
+    "    \"cultura\": cultura\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
@@ -16,7 +265,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
