--- a/Scrapping/Scrapping.ipynb
+++ b/Scrapping/Scrapping.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 1,
       "metadata": {
         "id": "fraZdbMlRsMY"
       },
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 2,
       "metadata": {
         "id": "uDWp2Vi9dZoA"
       },
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,9 +137,18 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Procesando: https://web.archive.org/web/20200609163417mp_/https://www.elespectador.com/opinion/interrumpir-el-olvido/\n",
-            "\n",
-            "Proceso completado. Resultados guardados en resultados_articulos.xlsx\n"
+            "Procesando: https://web.archive.org/web/20180101101206/https://www.elespectador.com/opinion/cesar-gaviria-y-cesar-mondragon-columna-731046\n",
+            "Procesando: https://web.archive.org/web/20180101101206/https://www.elespectador.com/opinion/mas-recomendaciones-de-fin-de-ano-columna-731038\n",
+            "Procesando: https://web.archive.org/web/20180127005204/https://www.elespectador.com/opinion/adios-al-papel-y-la-tinta-bienvenida-la-tecnologia-al-servicio-de-los-ciudadanos-columna-735529\n",
+            "Procesando: https://web.archive.org/web/20180101101206/https://www.elespectador.com/opinion/sobre-la-construccion-de-paz-y-el-indulto-fujimori-columna-730787\n",
+            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/fajardo-para-nada-tibio-columna-731305\n",
+            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/macedonia-de-norte-columna-731309\n",
+            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/el-nacionalismo-segun-vargas-llosa-columna-731306\n",
+            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/tiempo-sagrado-tiempo-profano-columna-731302\n",
+            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/la-rebelion-de-los-bueyes-columna-731238\n",
+            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/muntu-bantu-columna-731236\n",
+            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/2017-i-columna-731307\n",
+            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/lo-que-no-cambiara-en-el-2018-columna-731237\n"
           ]
         }
       ],
