--- a/Scrapping/Scrapping.ipynb
+++ b/Scrapping/Scrapping.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 11,
       "metadata": {
         "id": "fraZdbMlRsMY"
       },
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 12,
       "metadata": {
         "id": "uDWp2Vi9dZoA"
       },
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,18 +137,28 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Procesando: https://web.archive.org/web/20180101101206/https://www.elespectador.com/opinion/cesar-gaviria-y-cesar-mondragon-columna-731046\n",
-            "Procesando: https://web.archive.org/web/20180101101206/https://www.elespectador.com/opinion/mas-recomendaciones-de-fin-de-ano-columna-731038\n",
-            "Procesando: https://web.archive.org/web/20180127005204/https://www.elespectador.com/opinion/adios-al-papel-y-la-tinta-bienvenida-la-tecnologia-al-servicio-de-los-ciudadanos-columna-735529\n",
-            "Procesando: https://web.archive.org/web/20180101101206/https://www.elespectador.com/opinion/sobre-la-construccion-de-paz-y-el-indulto-fujimori-columna-730787\n",
-            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/fajardo-para-nada-tibio-columna-731305\n",
-            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/macedonia-de-norte-columna-731309\n",
-            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/el-nacionalismo-segun-vargas-llosa-columna-731306\n",
-            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/tiempo-sagrado-tiempo-profano-columna-731302\n",
-            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/la-rebelion-de-los-bueyes-columna-731238\n",
-            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/muntu-bantu-columna-731236\n",
-            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/2017-i-columna-731307\n",
-            "Procesando: https://web.archive.org/web/20180102104221/https://www.elespectador.com/opinion/lo-que-no-cambiara-en-el-2018-columna-731237\n"
+            "Procesando: https://web.archive.org/web/20180120220748/https://www.elespectador.com/opinion/cemento-y-marmol-columna-734310\n",
+            "Procesando: https://web.archive.org/web/20180120220748/https://www.elespectador.com/opinion/nuestro-desacreditado-vaso-de-leche-columna-734072\n",
+            "Procesando: https://web.archive.org/web/20180120220748/https://www.elespectador.com/opinion/la-indignacion-como-mercancia-columna-734260\n",
+            "Procesando: https://web.archive.org/web/20180120220748/https://www.elespectador.com/opinion/el-ciudadano-vegetativo-de-viviane-morales-columna-734257\n",
+            "Procesando: https://web.archive.org/web/20180120220748/https://www.elespectador.com/opinion/la-soledad-del-contralor-columna-734307\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/lo-mejor-de-los-cuarenta-columna-734498\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/entre-la-fe-y-la-politica-columna-734293\n",
+            "Procesando: https://web.archive.org/web/20180126003650/https://www.elespectador.com/opinion/lo-que-implica-viajar-marte-columna-735158\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/un-vinculo-innegable-columna-734385\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/cual-estructura-para-la-jep-columna-734372\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/voltereta-diabolica-columna-734366\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/los-viajes-del-agua-columna-734375\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/1968-columna-734369\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/los-vinos-de-colores-columna-734392\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/los-delincuentes-son-otros-columna-734367\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/una-eleccion-muy-ruidosa-columna-734365\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/el-hambre-con-las-ganas-de-comer-columna-734368\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/optimistas-y-pesimistas-del-pais-unios-columna-734403\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/ciro-y-yo-columna-734373\n",
+            "Procesando: https://web.archive.org/web/20180121230355/https://www.elespectador.com/opinion/cereal-para-superman-columna-734497\n",
+            "\n",
+            "Proceso completado. Resultados guardados en resultados_articulos.xlsx\n"
           ]
         }
       ],
