Regresion logistica ejemplo

--- a/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
+++ b/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "b3cf9605",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import math\n"
+    "import math\n",
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "d287ab17",
    "metadata": {},
    "outputs": [
@@ -206,7 +207,7 @@
        "9  https://web.archive.org/web/20190818130521/htt...             NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "095d7599",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lista de palabras relacionadas con política\n",
     "politica = [\n",
-    "    \"democracia\", \"gobierno\", \"elecciones\", \"parlamento\", \"corrupción\",\n",
+    "    \"democracia\", \"gobierno\", \"elecciones\",  \"corrupción\",\n",
     "    \"izquierda\", \"derecha\", \"populismo\", \"liberalismo\", \"conservadurismo\",\n",
     "    \"políticas\", \"partidos\", \"voto\", \"legislación\", \"oposición\",\n",
     "    \"presidente\", \"congreso\", \"liderazgo\", \"populista\", \"reforma\"\n",
@@ -245,7 +246,7 @@
     "    \"arte\", \"literatura\", \"cine\", \"música\", \"teatro\",\n",
     "    \"patrimonio\", \"tradición\", \"identidad\", \"diversidad\", \"folclore\",\n",
     "    \"creatividad\", \"exposición\", \"festival\", \"crítica\", \"vanguardia\",\n",
-    "    \"heritage\", \"artística\", \"movimiento\", \"cultural\", \"intercultural\"\n",
+    "    \"heritage\", \"artística\", \"movimiento\", \"cultural\", \"intercultural\", \"película\"\n",
     "]\n",
     "\n",
     "\n",
@@ -258,24 +259,246 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2eeb7456",
+   "metadata": {},
+   "source": [
+    "# Pasar texto a las features de entrada"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "97f2350a",
+   "execution_count": 24,
+   "id": "e0545ed1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para convertir texto a vector de características\n",
+    "def texto_a_vector(texto):\n",
+    "    # Contar palabras de cada categoría\n",
+    "    palabras = texto.lower().split()\n",
+    "    politica_count = sum(1 for palabra in palabras if palabra in politica)\n",
+    "    medio_count = sum(1 for palabra in palabras if palabra in medio_ambiente)\n",
+    "    cultura_count = sum(1 for palabra in palabras if palabra in cultura)\n",
+    "    return np.array([politica_count, medio_count, cultura_count])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1df8325",
+   "metadata": {},
+   "source": [
+    "# Funcion softmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d47b180c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función softmax\n",
+    "def softmax(z):\n",
+    "    exp_z = np.exp(z - np.max(z, axis=1, keepdims=True))\n",
+    "    return exp_z / np.sum(exp_z, axis=1, keepdims=True)\n",
+    "\n",
+    "# Softmax normal \n",
+    "def softmax_simple(z):\n",
+    "    exp_z = np.exp(z)\n",
+    "    return exp_z / np.sum(exp_z, axis=1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af13ffe8",
+   "metadata": {},
+   "source": [
+    "# Función de pérdida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "43a4be84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función de pérdida (entropía cruzada)\n",
+    "def cross_entropy(y_true, y_pred):\n",
+    "    m = y_true.shape[0]\n",
+    "    log_likelihood = -np.log(y_pred[range(m), y_true])\n",
+    "    return np.sum(log_likelihood) / m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98888067",
+   "metadata": {},
+   "source": [
+    "## Gradiente estocástico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4a668365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.01, epochs=1000, softmax_func=softmax):\n",
+    "\n",
+    "    scaler = StandardScaler()\n",
+    "    X_scaled = scaler.fit_transform(X_train)\n",
+    "\n",
+    "    n_samples, n_features = X_train.shape\n",
+    "    n_classes = len(np.unique(y_train))\n",
+    "    \n",
+    "    # Inicializar pesos y bias pequeños\n",
+    "    weights = np.random.randn(n_classes, n_features) * 0.01\n",
+    "    bias = np.zeros(n_classes)\n",
+    "    \n",
+    "    # Entrenamiento con gradiente estocástico\n",
+    "    for epoch in range(epochs):\n",
+    "        # Mezclar los datos en cada época\n",
+    "        indices = np.arange(n_samples)\n",
+    "        np.random.shuffle(indices)\n",
+    "        \n",
+    "        for i in indices:\n",
+    "            # Seleccionar un ejemplo aleatorio\n",
+    "            x = X_train[i:i+1]  # Mantener como matriz 2D (1, n_features)\n",
+    "            y = y_train[i]\n",
+    "            \n",
+    "            # Calcular logits\n",
+    "            z = np.dot(x, weights.T) + bias\n",
+    "            \n",
+    "            # Calcular probabilidades con softmax\n",
+    "            probs = softmax(z)\n",
+    "            \n",
+    "            # Crear vector one-hot de la clase verdadera\n",
+    "            one_hot = np.zeros(n_classes)\n",
+    "            one_hot[y] = 1\n",
+    "            \n",
+    "            # Calcular gradientes\n",
+    "            error = probs - one_hot\n",
+    "            grad_weights = np.dot(error.T, x)\n",
+    "            grad_bias = error.sum(axis=0)\n",
+    "            \n",
+    "            # Actualizar pesos y bias\n",
+    "            weights -= learning_rate * grad_weights\n",
+    "            bias -= learning_rate * grad_bias\n",
+    "            \n",
+    "    return weights, bias, scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bef1c86d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predecir(X, weights, bias, scaler):\n",
+    "    X_scaled = scaler.transform(X)\n",
+    "    z = np.dot(X_scaled, weights.T) + bias\n",
+    "    return np.argmax(softmax(z), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e59e1ea4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Documentos y clases para entrenamiento y prueba\n",
+    "documents = data[\"Texto\"].tolist()[:9]  # 9 documentos para entrenamiento\n",
+    "classes = data[\"Clase\"].tolist()[:9]    # clases correspondientes\n",
+    "doc_test = data[\"Texto\"][9]             # documento para prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f4be7396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clases_unicas = list(set(classes))  \n",
+    "clase_a_numero = {clase: idx for idx, clase in enumerate(clases_unicas)}\n",
+    "y_train = np.array([clase_a_numero[clase] for clase in classes])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "9fa7901e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.49792959773196915"
+       "{'Medio Ambiente': 0, 'Política': 1, 'Cultura': 2}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.std([0,1, 0,0 ,0 ,0,0,1,1,1,1])"
+    "clase_a_numero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "03227aaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = np.array([texto_a_vector(doc) for doc in documents])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "cb1b7926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = np.array([texto_a_vector(doc_test)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "3c139143",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights, bias, scaler = gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.1, epochs=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "57d70960",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2], dtype=int64)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predecir(X_test, weights, bias, scaler)"
    ]
   }
  ],
