--- a/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
+++ b/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "b3cf9605",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "d287ab17",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "9  https://web.archive.org/web/20190818130521/htt...             NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "095d7599",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "e0545ed1",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "d47b180c",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "43a4be84",
    "metadata": {},
    "outputs": [],
@@ -341,12 +341,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "4a668365",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.01, epochs=1000, softmax_func=softmax):\n",
+    "def gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.01, epochs=1000, softmax_func=softmax_simple):\n",
     "\n",
     "    scaler = StandardScaler()\n",
     "    X_scaled = scaler.fit_transform(X_train)\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "bef1c86d",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e59e1ea4",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "f4be7396",
    "metadata": {},
    "outputs": [],
@@ -431,17 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "9fa7901e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Medio Ambiente': 0, 'Política': 1, 'Cultura': 2}"
+       "{'Política': 0, 'Cultura': 1, 'Medio Ambiente': 2}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "03227aaf",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "cb1b7926",
    "metadata": {},
    "outputs": [],
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "3c139143",
    "metadata": {},
    "outputs": [],
@@ -482,23 +482,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
+   "id": "604c8a59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.18218631, -1.57603418, -0.85281835],\n",
+       "       [-1.95049478, -0.87482461,  1.39348798],\n",
+       "       [-0.21799383,  2.45527038, -0.53928774]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "57d70960",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2], dtype=int64)"
+       "array([1], dtype=int64)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "predecir(X_test, weights, bias, scaler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5d29e2b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6681877721681662"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/(1+np.exp(-0.7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a81c253c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2347469376354006"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(sum(np.power([-0.99, -0.66, 0.33],2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "28c1f9ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8708286933869707"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(sum(np.power([-1.5, -1, -0.5],2)))"
    ]
   }
  ],
