--- a/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
+++ b/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "id": "b3cf9605",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "id": "d287ab17",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "9  https://web.archive.org/web/20190818130521/htt...             NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "id": "095d7599",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "id": "e0545ed1",
    "metadata": {},
    "outputs": [],
@@ -278,9 +278,9 @@
     "    # Contar palabras de cada categoría\n",
     "    palabras = texto.lower().split()\n",
     "    politica_count = sum(1 for palabra in palabras if palabra in politica)\n",
-    "    medio_count = sum(1 for palabra in palabras if palabra in medio_ambiente)\n",
+    "    ambiente_count = sum(1 for palabra in palabras if palabra in medio_ambiente)\n",
     "    cultura_count = sum(1 for palabra in palabras if palabra in cultura)\n",
-    "    return np.array([politica_count, medio_count, cultura_count])"
+    "    return np.array([politica_count, ambiente_count, cultura_count])"
    ]
   },
   {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "id": "d47b180c",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 96,
    "id": "43a4be84",
    "metadata": {},
    "outputs": [],
@@ -341,12 +341,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 97,
    "id": "4a668365",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.01, epochs=1000, softmax_func=softmax_simple):\n",
+    "def gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.01, iterations=1000, softmax_func=softmax_simple):\n",
     "\n",
     "    scaler = StandardScaler()\n",
     "    X_scaled = scaler.fit_transform(X_train)\n",
@@ -355,25 +355,25 @@
     "    n_classes = len(np.unique(y_train))\n",
     "    \n",
     "    # Inicializar pesos y bias pequeños\n",
-    "    weights = np.random.randn(n_classes, n_features) * 0.01\n",
+    "    weights = np.random.randn(n_classes, n_features) * 0\n",
     "    bias = np.zeros(n_classes)\n",
     "    \n",
     "    # Entrenamiento con gradiente estocástico\n",
-    "    for epoch in range(epochs):\n",
+    "    for iter in range(iterations):\n",
     "        # Mezclar los datos en cada época\n",
     "        indices = np.arange(n_samples)\n",
     "        np.random.shuffle(indices)\n",
     "        \n",
     "        for i in indices:\n",
     "            # Seleccionar un ejemplo aleatorio\n",
-    "            x = X_train[i:i+1]  # Mantener como matriz 2D (1, n_features)\n",
+    "            x = X_scaled[i:i+1]  # Mantener como matriz 2D (1, n_features)\n",
     "            y = y_train[i]\n",
     "            \n",
     "            # Calcular logits\n",
     "            z = np.dot(x, weights.T) + bias\n",
     "            \n",
     "            # Calcular probabilidades con softmax\n",
-    "            probs = softmax(z)\n",
+    "            probs = softmax_func(z)\n",
     "            \n",
     "            # Crear vector one-hot de la clase verdadera\n",
     "            one_hot = np.zeros(n_classes)\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "id": "bef1c86d",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 99,
    "id": "e59e1ea4",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 100,
    "id": "f4be7396",
    "metadata": {},
    "outputs": [],
@@ -431,17 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 101,
    "id": "9fa7901e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Política': 0, 'Cultura': 1, 'Medio Ambiente': 2}"
+       "{'Medio Ambiente': 0, 'Cultura': 1, 'Política': 2}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 102,
    "id": "03227aaf",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 103,
    "id": "cb1b7926",
    "metadata": {},
    "outputs": [],
@@ -472,29 +472,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 104,
    "id": "3c139143",
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights, bias, scaler = gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.1, epochs=1000)"
+    "weights, bias, scaler = gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.1, iterations=2, softmax_func=softmax)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 105,
    "id": "604c8a59",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.18218631, -1.57603418, -0.85281835],\n",
-       "       [-1.95049478, -0.87482461,  1.39348798],\n",
-       "       [-0.21799383,  2.45527038, -0.53928774]])"
+       "array([[-0.13544759,  0.59647344, -0.16476516],\n",
+       "       [-0.37278455, -0.29109842,  0.39583083],\n",
+       "       [ 0.50823214, -0.30537501, -0.23106566]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,86 +505,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 106,
    "id": "57d70960",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1], dtype=int64)"
+       "'Cultura'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predecir(X_test, weights, bias, scaler)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "5d29e2b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6681877721681662"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1/(1+np.exp(-0.7))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "a81c253c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.2347469376354006"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sqrt(sum(np.power([-0.99, -0.66, 0.33],2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "28c1f9ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.8708286933869707"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sqrt(sum(np.power([-1.5, -1, -0.5],2)))"
+    "clase_indice = predecir(X_test, weights, bias, scaler)[0]\n",
+    "nombre_clase = clases_unicas[clase_indice]\n",
+    "nombre_clase"
    ]
   }
  ],
